Fixed some deprecated warnings. Refactor some code.